created a seperate container for displaying the saved tasks

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <button id="add">Add</button>
         </div>
         <div class="taskList"></div>
+        <div class="savedTasksContainer"></div> 
     </div>
     <script src="./script.js"></script>
   </body>
