added two different container for input and output

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="container">
+    <div class="containers">
+    <div class="left-container">
         <div class="head">
       <header>
         <h1>TO-DO LIST APP</h1>
@@ -17,7 +18,10 @@
             <button id="add">Add</button>
         </div>
         <div class="taskList"></div>
-        <div class="savedTasksContainer"></div> 
+    </div>
+    <div class="right-container">   
+      <h1>Tasks</h1>
+    </div>
     </div>
     <script src="./script.js"></script>
   </body>
